--- a/webui/index.html
+++ b/webui/index.html
@@ -72,6 +72,16 @@
               <hr>
               <div class="accordion accordion-flush" id="AccordionGroupItems">
               </div>
+              </div>
+              <!-- CLASS -->
+              <div class="tab-pane fade" id="nav-cfg-class" role="tabpanel" aria-labelledby="cfg-class-tab">
+                <div class="py-1 text-center">
+                  <h3>Classes </h3>
+                </div>
+                <div class="col-md-12 col-lg-12 py-3">
+                </div>
+              </div>
+              <!-- END -->
             </div>
             <hr>
             <div id="progessdot" class="invisible">
