--- a/webui/index.html
+++ b/webui/index.html
@@ -26,17 +26,17 @@
         </a>
         <ul class="nav nav-pills">
           <li class="nav-item">
-            <a href="" class="nav-link active" id="cfg-base-tab" data-bs-toggle="tab" data-bs-target="#nav-cfg-base" type="button" role="tab" aria-controls="nav-cfg-base" aria-selected="false">
+            <a href="" class="nav-link active" id="cfg-base-tab" data-bs-toggle="tab" data-bs-target="#nav-cfg-base" type="button" role="tab" aria-controls="nav-cfg-base" aria-selected="false" onclick="GetBaseCfg()">
               Base</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link" id="dashboard-tab" data-bs-toggle="tab" data-bs-target="#nav-dashboard" type="button" role="tab" aria-controls="nav-dashboard" aria-selected="false">
+            <a href="" class="nav-link" id="cfg-class-tab" data-bs-toggle="tab" data-bs-target="#nav-cfg-class" type="button" role="tab" aria-controls="nav-cfg-class" aria-selected="false">
               Class</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Interconnect</a>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">SIP Profile</a></li>
+                <li><a class="dropdown-item" id="cfg-class-tab" data-bs-toggle="tab" data-bs-target="#nav-cfg-class" type="button" role="tab" aria-controls="nav-cfg-class" aria-selected="false" href="#">SIP Profile</a></li>
                 <li><a class="dropdown-item" href="#">Access Service</a></li>
                 <li><a class="dropdown-item" href="#">Inbound</a></li>
                 <li><a class="dropdown-item" href="#">Outbound & Gateway</a></li>
@@ -53,25 +53,37 @@
     <div class="container mx-auto p-3 py-md-5">
       <div class="container">
         <main>
-          <!----- BEGIN: TOAST -->
-          <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center w-100">
-            <div id="toastmsg" class="toast align-items-center text-white bg-danger border-0" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="3500">
-              <div class="d-flex">
-                <div class="toast-body" id="event-message"></div>
-                <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+            <!----- BEGIN: TOAST -->
+            <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center w-100">
+              <div id="toastmsg" class="toast align-items-center text-white bg-danger border-0" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="3500">
+                <div class="d-flex">
+                  <div class="toast-body" id="event-message"></div>
+                  <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+                </div>
               </div>
             </div>
-          </div>
-          <!----- END: TOAST -->
-          <div class="tab-content" id="nav-tabContent">
-            <!-- DASHBOARD --->
-            <div class="tab-pane fade show active" id="nav-cfg-base" role="tabpanel" aria-labelledby="cfg-base-tab">
-              <div class="py-1 text-center">
-                <h3>Base</h3>
-              </div>
-              <hr>
-              <div class="accordion accordion-flush" id="AccordionGroupItems">
-              </div>
+            <!----- END: TOAST -->
+            <div class="tab-content" id="nav-tabContent">
+              <!-- BASE --->
+              <div class="tab-pane fade show active" id="nav-cfg-base" role="tabpanel" aria-labelledby="cfg-base-tab">
+                <div class="py-1 text-center">
+                  <h3>Bases</h3>
+                </div>
+                <hr>
+                <h5>NetAlias</h5>
+                <div class="col-md-12 my-5" id="base-netalias-table">
+                  <!-- GetandPresentNetAlias -->
+                </div>
+                <hr>
+                <h5>Access Control</h5>
+                <div class="col-md-12 my-5" id="base-accessctl-table">
+                  <!--  -->
+                </div>
+                <hr>
+                <h5>Cluster</h5>
+                <div class="col-md-12 my-5" id="base-cluster-table">
+                  <!--  -->
+                </div>
               </div>
               <!-- CLASS -->
               <div class="tab-pane fade" id="nav-cfg-class" role="tabpanel" aria-labelledby="cfg-class-tab">
