--- a/webui/index.html
+++ b/webui/index.html
@@ -70,16 +70,15 @@
                   <h3>Bases</h3>
                 </div>
                 <hr>
-                <h5>NetAlias</h5>
+                <h5>NetAlias <button type="button" class="btn btn-sm btn-primary" onclick="GeneralCreate('NetAlias');"><i class="fa fa-plus"></i></button> </h5> 
                 <div class="col-md-12 my-5" id="base-netalias-table">
                   <!-- GetandPresentNetAlias -->
                 </div>
                 <hr>
-                <h5>Access Control</h5>
+                <h5>Access Control <button type="button" class="btn btn-sm btn-primary" onclick="GeneralCreate('AccessControl');"><i class="fa fa-plus"></i></button> </h5>
                 <div class="col-md-12 my-5" id="base-accesscontrol-table">
-                  <!--  -->
+                  <!-- GetandPresentAccessControl -->
                 </div>
-                <button type="button" class="btn btn-outline-primary" data-bs-toggle="offcanvas" data-bs-target="#offcanvaspanel" aria-controls="offcanvaspanel" onclick="CallStatus(`+cnt+`);">Call Status</button>
               </div>
               <!-- CLASS -->
               <div class="tab-pane fade" id="nav-cfg-class" role="tabpanel" aria-labelledby="cfg-class-tab">
