--- a/webui/index.html
+++ b/webui/index.html
@@ -63,6 +63,10 @@
                 role="tab" aria-controls="nav-cfg-gateway" aria-selected="false" href="" onclick="GeneralGetPresent('Gateway');">SIP Gateway</a></li>
               <li><a class="dropdown-item" id="cfg-access-service-tab" data-bs-toggle="tab" data-bs-target="#nav-cfg-access-service" type="button" 
                 role="tab" aria-controls="nav-cfg-access-service" aria-selected="false" href="" onclick="GeneralGetPresent('AccessService');">Access Service</a></li>
+              <li><a class="dropdown-item" id="cfg-access-domain-policy-tab" data-bs-toggle="tab" data-bs-target="#nav-cfg-access-domain-policy" type="button"
+                role="tab" aria-controls="nav-cfg-access-domain-policy" aria-selected="false" href="" onclick="GeneralGetPresent('AccessDomainPolicy');">Access Domain Policy</a></li>
+              <li><a class="dropdown-item" id="cfg-access-user-directory-tab" data-bs-toggle="tab" data-bs-target="#nav-cfg-access-user-directory" type="button"
+                role="tab" aria-controls="nav-cfg-access-user-directory" aria-selected="false" href="" onclick="GeneralGetPresent('AccessUserDirectory');">Access User Directory</a></li>
             </ul>
           </li>
           <li class="nav-item">
