support special cases

--- a/webui/index.html
+++ b/webui/index.html
@@ -222,6 +222,26 @@
                   <!-- ACCESS SERVICE -->
                 </div>           
               </div>
+              <div class="tab-pane fade" id="nav-cfg-access-domain-policy" role="tabpanel" aria-labelledby="cfg-access-domain-policy-tab">
+                <div class="py-1 text-center">
+                  <h3>Access Domain Policy </h3>
+                </div>
+                <hr>
+                <button type="button" class="btn btn-outline-primary" onclick="GeneralCreate('AccessDomainPolicy');">Create <i class="fa fa-plus"></i></button>
+                <div class="col-md-12 my-5" id="access-domain-policy-table">
+                  <!-- ACCESS DOMAIN POLICY -->
+                </div>           
+              </div>
+              <div class="tab-pane fade" id="nav-cfg-access-user-directory" role="tabpanel" aria-labelledby="cfg-access-user-directory-tab">
+                <div class="py-1 text-center">
+                  <h3>Access User Directory </h3>
+                </div>
+                <hr>
+                <button type="button" class="btn btn-outline-primary" onclick="GeneralCreate('AccessUserDirectory');">Create <i class="fa fa-plus"></i></button>
+                <div class="col-md-12 my-5" id="access-user-directory-table">
+                  <!-- ACCESS USER DIRECTORY -->
+                </div>
+
               <!-- END -->
             </div>
             <!--- PROGRESS BAR -->
